# SWE-MiniSandbox

./: conda_env.sh  mkdocs.yml  readme.md
R2E-Gym/: .gitignore  README.md  pyproject.toml
SWE-ReX/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FOOTER_IMPLEMENTATION_SUMMARY.md  LICENSE.txt  README.md  codecov.yml  mkdocs.yml  pyproject.toml  test_footer.py
SWE-agent/: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  mlc_config.json  pyproject.toml  run.sh
SWE-bench/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml
SWE-smith/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  log.xml.jsonl  mkdocs.yml  pyproject.toml
SkyRL/: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  format.sh  plot_process.py  process_monitor.py  pyproject.toml
config/: sweagent_docker.yaml  sweagent_infer.yaml  sweagent_infer_default.yaml  sweagent_infer_oss.yaml  swesmith_docker.yaml  swesmith_infer.yaml  swesmith_infer_default.yaml
data/: balance.sh  balance_data.py  filter_smith.py  merge_yaml.py  unique_images.py
docs/: index.md
sandboxdev/: =2.1.1  pyproject.toml
sandboxdev/swesandbox/: customer_instance.py  ds_convertor.py  sandbox_deployment.py  swe_bench_instance_map.py  utils.py
sandboxdev/swesandbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sandboxdev/swesandbox/swebench_utils/: create_scripts.py  git_request.py  python.py  test_spec.py  yaml2reqs.py
(+1512 files in other folders)
