[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swesandbox"  # 包名（发布到 PyPI 时的名字）
version = "0.1.0"
description = "我的 pip 包示例"
readme = "README.md"
authors = [
    { name = "danlongyuan", email = "your_email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/yourname/mypackage"
Repository = "https://github.com/yourname/mypackage"
